# address-book

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: fc0c95e0d000_initial_schema_lat_lng.py
alembic/versions/_legacy/: 37c338698488_initial_migration.py
core/: config.py  db.py  models.py  schemas.py
tests/: .env.test  conftest.py  test_addresses.py
