[project]
name = "address-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.4",
    "fastapi[standard]>=0.116.1",
    "haversine>=2.9.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.42",
]

[dependency-groups]
dev = [
    "anyio>=4.10.0",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
